--- a/src/Clock/Clock.css
+++ b/src/Clock/Clock.css
@@ -5,11 +5,10 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 2px solid #fff; /* Add white border */
-    background-color: transparent; /* Set background color to transparent */
+    border: 2px solid #fff;
+    background-color: transparent;
 }
 
-/* Existing styles remain the same */
 .clock-face {
     position: absolute;
     top: 50%;
@@ -21,8 +20,6 @@
     background: radial-gradient(circle, #fff 60%, #aaa 80%, #666 100%);
     border: 2px solid #333;
 }
-
-/* Remaining styles... */
 
 .hour-mark,
 .minute-mark,
@@ -56,7 +53,7 @@
 .hour-hand {
     width: 6px;
     height: 40px;
-    top: 30px; /* Adjusted position */
+    top: 30px;
     left: calc(50% - 3px);
     background-color: #333;
 }
@@ -76,7 +73,7 @@
     top: 0;
     left: calc(50% - 1px);
     background-color: #f00;
-    z-index: 1; /* Ensure second hand is on top of other hands */
+    z-index: 1;
     border-radius: 2px;
 }
 
@@ -88,5 +85,5 @@
     left: calc(50% - 3px);
     background-color: #333;
     border-radius: 50%;
-    z-index: 2; /* Ensure center dot is on top of other elements */
+    z-index: 2;
 }
